--- a/code/package.json
+++ b/code/package.json
@@ -1,11 +1,26 @@
 {
   "name": "@repo/root",
   "private": true,
+  "version": "0.0.1",
+  "scripts": {
+    "test": "vitest --passWithNoTests",
+    "lint": "eslint .",
+    "format": "prettier -w .",
+    "format:check": "prettier -c ."
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.0",
     "typescript": "^5.5.0",
     "vitest": "^2.0.0"
   },
-  "scripts": {
-    "test": "vitest --passWithNoTests"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
