--- a/code/package.json
+++ b/code/package.json
@@ -9,12 +9,11 @@
     "format:check": "prettier -c ."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^9.1.2",
     "prettier": "^3.3.0",
     "typescript": "^5.5.0",
+    "typescript-eslint": "^8.41.0",
     "vitest": "^2.0.0"
   },
   "lint-staged": {
