--- a/code/package.json
+++ b/code/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^9.1.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.3.0",
     "typescript": "^5.5.0",
     "typescript-eslint": "^8.41.0",
