--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,4 +33,5 @@ jobs:
         run: pnpm -r list --depth -1
 
       - name: Run tests in all packages (if present)
-        run: pnpm -r --workspace-concurrency=1 run test:ci --if-present
+  run: pnpm -r --workspace-concurrency=1 --if-present run test:ci
+
