ci: add/fix minimal tests workflow (powershell)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,12 +2,14 @@ name: CI - Workspace Tests
 
 on:
   push:
-    branches: ["**"]
+    branches:
+      - '**'
   pull_request:
-    branches: ["**"]
+    branches:
+      - '**'
 
 jobs:
-  test-all:
+  test_all:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -26,13 +28,11 @@ jobs:
         with:
           node-version: 22
 
-      # Hard-override, damit pnpm NICHT frozen-lockfile erzwingt
       - name: Ensure no frozen lockfile
         run: pnpm config set frozen-lockfile false
 
-     - name: Install dependencies (no scripts, frozen lockfile)
-  run: pnpm install --ignore-scripts --frozen-lockfile
-
+      - name: Install dependencies (no scripts)
+        run: pnpm install --ignore-scripts --no-frozen-lockfile
 
       - name: Show workspace packages
         run: pnpm -r list --depth -1
