--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,17 +39,17 @@ jobs:
       - name: Run tests in all packages (if present)
         run: pnpm -r --workspace-concurrency=1 --if-present run test:ci
 
-    osv_scan:
-    # Reusable workflow der OSV-Scanner-Maintainer (exakte Version!)
-    uses: google/osv-scanner-action/.github/workflows/osv-scanner-reusable.yml@v2.2.2
-    with:
-      # Wir scannen nur das Lockfile im Monorepo unter /code,
-      # damit es schnell ist und keinen Build braucht.
-      scan-args: |-
-        --lockfile=./code/pnpm-lock.yaml
+      osv_scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-      # CI nicht rot machen – nur Report (später gern auf true drehen)
-      fail-on-vuln: false
-      # Kein SARIF-Upload -> keine extra Permissions nötig
-      upload-sarif: false
+      # OSV-Scanner CLI downloaden und installieren
+      - name: Install OSV-Scanner
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/google/osv-scanner/main/scripts/install.sh | sh -s -- -b /usr/local/bin
 
+      # Lockfile im Monorepo scannen (grün bleiben, nur Bericht)
+      - name: Run OSV scan (lockfile only)
+        run: |
+          osv-scanner --lockfile=./code/pnpm-lock.yaml || true
