--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,10 @@
 ﻿name: CI - Workspace Tests
 
 on:
+  concurrency:
+    group: tests-${{ github.ref }}
+    cancel-in-progress: true
+
   push:
     branches:
       - '**'
@@ -11,6 +15,7 @@ on:
 jobs:
   test_all:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     defaults:
       run:
         working-directory: code
@@ -35,6 +40,7 @@ jobs:
 
   osv_scan:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
       - name: Install OSV-Scanner
