ci: allow manual run (workflow_dispatch)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - '**'
-
+    workflow_dispatch:
 concurrency:
   group: "tests-${{ github.ref }}"
   cancel-in-progress: true
