--- a/code/apps/desktop/package.json
+++ b/code/apps/desktop/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:^",
+    "@shared/extension": "workspace:^",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
