feat: Add Microsoft Copilot-style 3-sidebar browser extension with WebSocket integration

--- a/code/apps/extension-chromium/tsconfig.json
+++ b/code/apps/extension-chromium/tsconfig.json
@@ -2,9 +2,13 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022","DOM"],
+    "lib": ["ES2022", "DOM"],
     "strict": true,
     "moduleResolution": "Bundler",
-    "types": ["chrome"]
+    "types": ["chrome"],
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
