--- a/code/apps/desktop/package.json
+++ b/code/apps/desktop/package.json
@@ -1,35 +1,22 @@
 {
-  "name": "desktop",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "desktop-app",
+  "version": "1.0.0",
+  "description": "Simple Electron Desktop App",
+  "main": "main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "electron .",
+    "dev": "electron . --dev",
+    "build": "electron-builder",
+    "websocket": "node websocket-server.js"
   },
+  "keywords": ["electron", "desktop"],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
-    "@shared/core": "workspace:^",
-    "@shared/extension": "workspace:^",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react": "^4.2.1",
-    "electron": "^30.0.1",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6",
-    "vite-plugin-electron": "^0.28.6",
-    "vite-plugin-electron-renderer": "^0.14.5"
-  },
-  "main": "dist-electron/main.js"
+    "electron": "^28.0.0",
+    "electron-builder": "^24.6.4"
+  }
 }
