--- a/code/apps/extension-chromium/package.json
+++ b/code/apps/extension-chromium/package.json
@@ -9,10 +9,17 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.2.0",
+    "@types/chrome": "^0.1.4",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.9.2",
     "vite": "^5.1.6"
   },
   "dependencies": {
-    "webextension-polyfill": "^0.12.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webextension-polyfill": "^0.12.0",
+    "ws": "^8.18.3"
   }
 }
