--- a/code/apps/electron-vite-project/electron-builder.json5
+++ b/code/apps/electron-vite-project/electron-builder.json5
@@ -1,9 +1,9 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "com.opengiraffe.desktop",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "OpenGiraffe",
   "directories": {
     "output": "release/${version}"
   },
@@ -29,10 +29,13 @@
     "artifactName": "${productName}-Windows-${version}-Setup.${ext}"
   },
   "nsis": {
-    "oneClick": false,
+    "oneClick": true,
     "perMachine": false,
-    "allowToChangeInstallationDirectory": true,
-    "deleteAppDataOnUninstall": false
+    "allowToChangeInstallationDirectory": false,
+    "deleteAppDataOnUninstall": false,
+    "createDesktopShortcut": true,
+    "createStartMenuShortcut": true,
+    "shortcutName": "OpenGiraffe"
   },
   "linux": {
     "target": [
