Brand: rename to OpenGiraffe across extension, desktop, shared; update electron-vite UI

--- a/code/apps/desktop/package.json
+++ b/code/apps/desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "optimando-desktop",
   "version": "1.0.0",
-  "description": "Optimando Desktop App - WebSocket Server",
+  "description": "OpenGiraffe Desktop App - WebSocket Server",
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
