--- a/code/apps/electron-vite-project/electron-builder.json5
+++ b/code/apps/electron-vite-project/electron-builder.json5
@@ -3,6 +3,9 @@
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
   "appId": "com.opengiraffe.desktop",
   "asar": true,
+  "asarUnpack": [
+    "**/node_modules/ffmpeg-static/**/*"
+  ],
   "productName": "OpenGiraffe",
   "directories": {
     "output": "release/${version}"
