--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
