feat: PostgreSQL backend integration with connection test
- Add PostgreSQL adapter and connection testing
- Implement DB IPC handlers in Electron
- Add BackendSwitcher component with diagnostic tools
- Fix Electron stability issues (cache, GPU, window lifecycle)
- Add WebSocket message forwarding for DB operations
- Copy migration files to dist-electron
- Install pg module for PostgreSQL support
- Add comprehensive logging and error handling

--- a/code/apps/electron-vite-project/electron-builder.json5
+++ b/code/apps/electron-vite-project/electron-builder.json5
@@ -30,7 +30,8 @@
         ]
       }
     ],
-    "artifactName": "${productName}-Windows-${version}-Setup.${ext}"
+    "artifactName": "${productName}-Windows-${version}-Setup.${ext}",
+    "executableName": "opengiraffe"
   },
   "nsis": {
     "oneClick": true,
