--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -11,8 +11,10 @@
     "diagnose": "node scripts/diagnose-websocket.js"
   },
   "dependencies": {
+    "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
+    "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "pg": "^8.16.3",
