--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -14,12 +14,16 @@
     "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
+    "argon2": "^0.31.0",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "libsodium-wrappers": "^0.7.11",
     "pg": "^8.16.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sql.js": "^1.10.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/pg": "^8.10.9",
@@ -30,6 +34,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
