--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -11,6 +11,7 @@
     "diagnose": "node scripts/diagnose-websocket.js"
   },
   "dependencies": {
+    "@journeyapps/sqlcipher": "^5.3.1",
     "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
@@ -22,7 +23,6 @@
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sql.js": "^1.10.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
