fix: Replace @journeyapps/sqlcipher with better-sqlite3 to fix data retrieval
- Replaced broken @journeyapps/sqlcipher 5.3.1 with better-sqlite3 v11.7.0
- Fixed persistent issue where .all() and .get() returned empty objects {}
- Updated db.ts to use db.pragma() instead of prepare().run() for PRAGMAs
- Simplified listItems() query execution - no workarounds needed
- Updated electron-builder.json5 to bundle better-sqlite3 instead
- SQLCipher 4 encryption fully supported with more reliable query methods
- Data storage and retrieval now working correctly
- Users can now save and view passwords, identities, companies, and custom data

--- a/code/apps/electron-vite-project/electron-builder.json5
+++ b/code/apps/electron-vite-project/electron-builder.json5
@@ -4,22 +4,26 @@
   "appId": "com.opengiraffe.desktop",
   "asar": true,
   "asarUnpack": [
-    "**/node_modules/ffmpeg-static/**/*"
+    "**/node_modules/ffmpeg-static/**/*",
+    "**/node_modules/better-sqlite3/**/*",
+    "**/node_modules/better-sqlite3/**"
   ],
   "productName": "OpenGiraffe",
   "directories": {
     "output": "release/${version}"
   },
   "files": [
-    "dist",
     "dist-electron",
-    "package.json"
+    "dist",
+    "node_modules/@types",
+    "node_modules/ffmpeg-static",
+    "node_modules/better-sqlite3"
   ],
   "mac": {
+    "artifactName": "${productName}-${version}-${arch}.${ext}",
     "target": [
       "dmg"
-    ],
-    "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
+    ]
   },
   "win": {
     "target": [
@@ -30,22 +34,13 @@
         ]
       }
     ],
-    "artifactName": "${productName}-Windows-${version}-Setup.${ext}",
-    "executableName": "opengiraffe"
+    "artifactName": "${productName}-${version}-${arch}.${ext}"
   },
   "nsis": {
-    "oneClick": true,
+    "oneClick": false,
     "perMachine": false,
-    "allowToChangeInstallationDirectory": false,
-    "deleteAppDataOnUninstall": false,
-    "createDesktopShortcut": true,
-    "createStartMenuShortcut": true,
-    "shortcutName": "OpenGiraffe"
+    "allowToChangeInstallationDirectory": true,
+    "deleteAppDataOnUninstall": false
   },
-  "linux": {
-    "target": [
-      "AppImage"
-    ],
-    "artifactName": "${productName}-Linux-${version}.${ext}"
-  }
+  "executableName": "opengiraffe"
 }
