--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -12,10 +12,10 @@
     "postinstall": "electron-rebuild -f -w"
   },
   "dependencies": {
-    "@journeyapps/sqlcipher": "^5.3.1",
     "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
+    "better-sqlite3": "^11.10.0",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
