feat: Introduce Electron file watching and diffing services, new shared UI components, and a GlassDoor mini-app.

--- a/code/apps/extension-chromium/tsconfig.json
+++ b/code/apps/extension-chromium/tsconfig.json
@@ -2,13 +2,30 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM"],
+    "lib": [
+      "ES2022",
+      "DOM"
+    ],
     "strict": true,
     "moduleResolution": "Bundler",
-    "types": ["chrome"],
+    "types": [
+      "chrome"
+    ],
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@shared": [
+        "../../packages/shared/src/index.ts"
+      ],
+      "@shared/*": [
+        "../../packages/shared/src/*"
+      ],
+      "@shared-extension/*": [
+        "../../packages/shared-extension/src/*"
+      ]
+    }
   }
 }
