--- a/code/packages/shared/package.json
+++ b/code/packages/shared/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.1",
   "type": "module",
   "main": "src/index.ts",
-  "types": "src/index.ts"
+  "types": "src/index.ts",
+  "devDependencies": {
+    "@types/react": "^19.2.6",
+    "react": "^19.2.0"
+  }
 }
