--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -16,6 +16,7 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.10.0",
+    "chokidar": "^4.0.3",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
@@ -23,6 +24,7 @@
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simple-git": "^3.30.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
