--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tesseract.js": "^5.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
