Refactor GlassView application structure and improve file watching service
- Moved rendering logic from App.tsx to a new main.tsx file for better separation of concerns.
- Updated import paths in GlassView.tsx to use new alias '@lib' for components.
- Enhanced notification ID generation in GlassView to use a dedicated function.
- Refactored activity chart data handling in GlassView for improved data structure.
- Reorganized DashboardLayout in GlassView to utilize widgets for better layout management.
- Updated FileWatcher service to simulate file watching in a browser environment, replacing Node.js fs methods with mock implementations.
- Changed EventEmitter import to use 'eventemitter3' for better performance.
- Adjusted Vite configuration to allow access to the code-block-library package and changed server port to 5173.

--- a/code/apps/glassview/package.json
+++ b/code/apps/glassview/package.json
@@ -15,11 +15,14 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "eventemitter3": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0",
-    "@code-block-library/components": "workspace:*"
+    "@optimandoai/code-block-library": "file:../../packages/code-block-library",
+    "@shared/core": "file:../../packages/shared",
+    "@shared/extension": "file:../../packages/shared-extension"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
