--- a/code/apps/extension-chromium/package.json
+++ b/code/apps/extension-chromium/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@optimandoai/code-block-library": "workspace:*",
-    "@shared/components": "workspace:*",
+    "@shared/core": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webextension-polyfill": "^0.12.0",
