--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -14,12 +14,18 @@
   "dependencies": {
     "@types/express": "^5.0.5",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/imap": "^0.8.42",
+    "@types/mailparser": "^3.4.6",
+    "@types/nodemailer": "^7.0.4",
     "@types/ws": "^8.18.1",
     "better-sqlite3": "^11.10.0",
     "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "imap": "^0.8.19",
     "libsodium-wrappers": "^0.7.11",
+    "mailparser": "^3.9.0",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
