--- a/code/apps/extension-chromium/package.json
+++ b/code/apps/extension-chromium/package.json
@@ -17,6 +17,7 @@
     "vite": "^5.4.20"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webextension-polyfill": "^0.12.0",
