feat: Add mode-ready UI shell with workspace/submode selectors, P2P Chat, P2P Live, Group Stream, Admin placeholders, improved selectbox styling

--- a/code/apps/extension-chromium/package.json
+++ b/code/apps/extension-chromium/package.json
@@ -23,6 +23,7 @@
     "webextension-polyfill": "^0.12.0",
     "wink-eng-lite-web-model": "^1.8.1",
     "wink-nlp": "^2.4.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zustand": "^5.0.9"
   }
 }
