--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -33,6 +33,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/libsodium-wrappers": "^0.7.14",
     "@types/pg": "^8.10.9",
     "@types/react": "^18.2.64",
