--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.5",
+    "body-parser": "^2.2.0",
     "canvas": "3.2.0",
     "pdfjs-dist": "4.10.38",
     "@types/fluent-ffmpeg": "^2.1.27",
