--- a/code/apps/electron-vite-project/package.json
+++ b/code/apps/electron-vite-project/package.json
@@ -12,6 +12,7 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
+    "@noble/post-quantum": "^0.2.1",
     "@types/express": "^5.0.5",
     "body-parser": "^2.2.0",
     "canvas": "3.2.0",
