--- a/code/apps/extension-chromium/package.json
+++ b/code/apps/extension-chromium/package.json
@@ -17,6 +17,8 @@
     "vite": "^5.4.20"
   },
   "dependencies": {
+    "@noble/curves": "^1.4.0",
+    "@noble/ed25519": "^2.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
